Bug 304891 - Last line is not imported by CSV Importer if it is only ""
Summary: Last line is not imported by CSV Importer if it is only ""
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Migration/Import/Export (other bugs)
Version First Reported In: 2.5.0
Platform: Compiled Sources All
: NOR normal
Target Milestone: 2.5
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-09 22:03 UTC by Jarosław Staniek
Modified: 2012-08-11 11:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5.1
Sentry Crash Report:


Attachments
test data (6 bytes, text/plain)
2012-08-09 22:05 UTC, Jarosław Staniek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2012-08-09 22:03:12 UTC
Last line is not imported by CSV Importer if it is only "".

Reproducible: Always

Steps to Reproduce:
1. Create a csv file with these two lines; do not add end of line after the 2nd line.
"a"
""

Actual Results:  
Importing of only "a" column is proposed, no data rows.

Expected Results:  
"a" column is proposed, and one row with one empty text value.
Comment 1 Jarosław Staniek 2012-08-09 22:05:22 UTC
Created attachment 73076 [details]
test data
Comment 2 Jarosław Staniek 2012-08-10 20:39:53 UTC
Git commit c6485a929f8a038c6e1fbb854e51951fb7064af0 by Jaroslaw Staniek.
Committed on 10/08/2012 at 00:04.
Pushed by staniek into branch 'calligra/2.5'.

CSV Import: Import last line even if it is only ""
REVIEW:105950
FIXED-IN:2.5.1

M  +13   -3    kexi/plugins/importexport/csv/kexicsvimportdialog.cpp

http://commits.kde.org/calligra/c6485a929f8a038c6e1fbb854e51951fb7064af0
Comment 3 Jarosław Staniek 2012-08-10 20:51:39 UTC
Git commit 7e45cfbc27148bab59dc204db6a6804b2215b02a by Jaroslaw Staniek.
Committed on 10/08/2012 at 00:04.
Pushed by staniek into branch 'master'.

CSV Import: Import last line even if it is only ""
REVIEW:105950

M  +13   -3    kexi/plugins/importexport/csv/kexicsvimportdialog.cpp

http://commits.kde.org/calligra/7e45cfbc27148bab59dc204db6a6804b2215b02a