CSV Import: Import last line even if it is only ""

BUG:304891
REVIEW:105950